--- a/Pythonapp/StartOptionsDialog.ui
+++ b/Pythonapp/StartOptionsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>850</width>
-    <height>596</height>
+    <width>607</width>
+    <height>482</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,21 +47,9 @@
            </widget>
           </item>
           <item>
-           <widget class="QSlider" name="immune_time_slider">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-            <property name="toolTip">
-             <string>Time before immune turn into newly susceptible</string>
-            </property>
-            <property name="minimum">
-             <number>2</number>
-            </property>
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+           <widget class="QLabel" name="yes_no_immunizing_label">
+            <property name="text">
+             <string>No</string>
             </property>
            </widget>
           </item>
@@ -183,66 +171,25 @@
        </widget>
       </item>
       <item>
-       <widget class="QGroupBox" name="horizontalGroupBox_6">
+       <widget class="QGroupBox" name="groupBox">
         <property name="title">
-         <string>Examples:</string>
+         <string>Examples</string>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_6">
-         <item>
-          <layout class="QVBoxLayout" name="verticalLayout_3">
-           <item>
-            <widget class="QPushButton" name="test_desease">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="text">
-              <string>Test</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <spacer name="verticalSpacer">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
+        <layout class="QGridLayout" name="examples_layout">
+         <item row="1" column="0">
+          <spacer name="verticalSpacer">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
          </item>
-         <item>
-          <layout class="QVBoxLayout" name="verticalLayout_12">
-           <item>
-            <widget class="QPushButton" name="pushButton_2">
-             <property name="text">
-              <string>Load Previous</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <spacer name="verticalSpacer_3">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
-         </item>
-         <item>
+         <item row="0" column="1">
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -546,22 +493,6 @@
  <resources/>
  <connections>
   <connection>
-   <sender>test_desease</sender>
-   <signal>pressed()</signal>
-   <receiver>StartOptionsDialog</receiver>
-   <slot>test_desease_pressed()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>499</x>
-     <y>98</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>532</x>
-     <y>151</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>structure_combo</sender>
    <signal>currentTextChanged(QString)</signal>
    <receiver>StartOptionsDialog</receiver>
@@ -590,22 +521,6 @@
     <hint type="destinationlabel">
      <x>820</x>
      <y>495</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>pushButton_2</sender>
-   <signal>pressed()</signal>
-   <receiver>StartOptionsDialog</receiver>
-   <slot>load_asked()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>611</x>
-     <y>79</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>653</x>
-     <y>151</y>
     </hint>
    </hints>
   </connection>
